--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
       with:
         node-version: '20'
         cache: 'npm'
-        
+
     - name: Install dependencies
       run: npm ci
       
@@ -27,7 +27,7 @@ jobs:
       run: npm run lint
       
     - name: Build
-      run: npm run build
+      run: npm run build:ci
       env:
         NODE_ENV: production
         
