--- a/rust-chess/Cargo.toml
+++ b/rust-chess/Cargo.toml
@@ -10,5 +10,6 @@ crate-type = ["cdylib"]
 chess = "3.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-
-
+wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
+js-sys = "0.3"
+web-sys = "0.3"
